tests/baselines/reference/destructuringArrayBindingPatternAndAssignment4(target=es2015).errors.txt
destructuringArrayBindingPatternAndAssignment4.ts(5,7): error TS2488: Type 'number[] | null' must have a '[Symbol.iterator]()' method that returns an iterator.


==== destructuringArrayBindingPatternAndAssignment4.ts (1 errors) ====
    // #35497
    
    
    declare const data: number[] | null;
    const [value] = data; // Error
          ~~~~~~~
!!! error TS2488: Type 'number[] | null' must have a '[Symbol.iterator]()' method that returns an iterator.
    